fix: update scrollbar thumb hover color for better visibility

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ footer :hover{
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(transparent, #30ff00);
+  background: linear-gradient(transparent, #ff5e01);
 
 
 }
